<resources>
    <string name="app_name">GOTPTTK</string>
    <string name="account">Informacje o koncie</string>
    <string name="manage_spots">Zarządzaj punktami</string>
    <string name="manage_sections">Zarządzaj odcinkami</string>
    <string name="got_pttk">GOT PTTK</string>
    <string name="menu_open">Otwórz menu</string>
    <string name="menu_close">Zamknij menu</string>
    <string name="add_points_button_text">Dodawanie punktów</string>
    <string name="edit_point_button_text">Edytowanie punktów</string>
    <string name="delete_points_button_text">Usuwanie punktów</string>
    <string name="choose_operation_text">Wybierz działanie</string>
    <string name="add_sections_button_text">Dodawanie odcinków</string>
    <string name="edit_sections_button_text">Edytowanie odcinków</string>
    <string name="delete_sections_button_text">Usuwanie odcinków</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spot_name_text">Nazwa punktu</string>
    <string name="spot_height_text">Wysokość punktu</string>
    <string name="description_text">Opis</string>
    <string name="add_button_text">Dodaj</string>
    <string name="mountains_bottom_text">Góry</string>
    <string name="edit_spot_data_text">Dane edytowanego punktu</string>
    <string name="save_button_text">Zapisz</string>
    <string name="search_button_text">Szukaj</string>
    <string name="removed_spot_data_text">Dane usuwanego punktu</string>
    <string name="remove_button_text">Usuń</string>
    <string name="starting_point_text">Punkt startowy</string>
    <string name="ending_point_text">Punkt końcowy</string>
    <string name="length_text">Długość</string>
    <string name="mountain_range_text">Obszar górski</string>
    <string name="points_text">Punktacja</string>
    <string name="reverse_points_text">Punktacja w drugą stronę</string>
    <string name="active_since_text">Aktywny od</string>
    <string name="min_length_text">Min. długość</string>
    <string name="min_points_text">Min. punktacja</string>
    <string name="edit_section_data_text">Dane edytowanego odcinka</string>
    <string name="remove_section_data_text">Dane usuwanego odcinka</string>
    <string name="login">Logowanie</string>
    <string name="login_button_text">Zaloguj jako admin</string>
    <string name="logout_button_text">Wyloguj</string>
    <string name="search_sections">Przeglądaj odcinki</string>
    <string name="plan_travel_route">Planuj wycieczkę</string>
    <string name="logged_as_admin_text">Zalogowano jako admin</string>
    <string name="go_back_text">Cofnij</string>
    <string name="finish_text">Zakończ</string>
    <string name="end_in_text">Koniec w:</string>
    <string name="total_length_max">Całkowita długość:</string>
    <string name="start_in_text">Początek:</string>
    <string name="end_text">Koniec:</string>
</resources>