<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".spotsFragments.EditChosenSpotFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/edit_spot_data_text"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="32dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textViewEditSpotName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="46dp"
        android:text="@string/spot_name_text"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/editTextEditSpotName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textViewEditSpotHeight"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="44dp"
        android:text="@string/spot_height_text"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/editTextEditSpotHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textViewEditSpotDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="191dp"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="10dp"
        android:text="@string/description_text"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/editTextEditSpotDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextEditSpotName"
        android:layout_width="180dp"
        android:layout_height="31dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey_edit_text"
        android:ems="10"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditSpotName" />

    <EditText
        android:id="@+id/editTextEditSpotHeight"
        android:layout_width="180dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey_edit_text"
        android:ems="10"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toEndOf="@+id/editTextEditSpotName"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditSpotHeight" />

    <EditText
        android:id="@+id/editTextEditSpotDesc"
        android:layout_width="298dp"
        android:layout_height="79dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="40dp"
        android:background="@color/grey_edit_text"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/buttonEditSpot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="217dp"
        android:background="@drawable/mountains_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/mountains_bottom_text" />

    <Button
        android:id="@+id/buttonEditSpot"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="99dp"
        android:text="@string/save_button_text"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>